--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <title>Labs 1</title>
 </head>
 <body>
-    <a href="lab1/index.html">Лабараторная номер 1</a>
+    <a href="lab1/index.html">Лабораторная номер 1</a>
     <br/>
-    <a href="lab2/index.html">Лабараторная номер 2</a>
+    <a href="lab2/index.html">Лабораторная номер 2</a>
     <br/>
-    <a href="lab3,4/index.html">Лабараторная номер 3</a>
+    <a href="lab3,4/index.html">Лабораторная номер 3</a>
 </body>
 </html>
